Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -348,30 +348,116 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "C_vigilante = 5\n",
+        "s_vigilante = 300\n",
+        "\n",
+        "C_docente = 16\n",
+        "s_docente = 500\n",
+        "\n",
+        "C_coordinador = 2\n",
+        "s_coordinador = 600\n",
+        "\n",
+        "total_empleados = C_vigilante + C_docente + C_coordinador\n",
+        "print(total_empleados)\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "F_X-wxdm_5Ys"
+        "id": "F_X-wxdm_5Ys",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b2958142-8ba7-4c89-dca9-25aa63ad2827"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "23\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia_salarios = s_coordinador- s_vigilante\n",
+        "print(diferencia_salarios)\n"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "858fd661-bc87-4f5f-a4ce-05461aa54adc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "300\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio_salarios = (C_vigilante * s_vigilante + C_docente * s_docente\n",
+        "                     + C_coordinador * s_coordinador)/total_empleados\n",
+        "promedio_salarios"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e28b78fb-d33b-4c4d-de15-600476e5f65e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(promedio_salarios)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CmCiX0FLyKUW",
+        "outputId": "4bd76e5d-9c20-4330-b657-0fa2478462e3"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
