Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -90,21 +90,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Hola Mundo')"
+      ],
       "metadata": {
-        "id": "0qZX8_ZQBYyk"
+        "id": "0qZX8_ZQBYyk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34c5b5ef-f2a3-48bb-8eb3-d91cba749bc0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola Mundo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print('Hello Carlos, how are you today')"
+      ],
       "metadata": {
-        "id": "GLMzF_AKBY7a"
+        "id": "GLMzF_AKBY7a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a449bbb6-57ae-4f2d-b495-451f0030969b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Carlos, how are you today\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
