Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -69,15 +69,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "o7jrX_iKhdkU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## ¡Hola mundo!\n",
@@ -170,32 +161,173 @@
     {
       "cell_type": "code",
       "source": [
-        "v = True\n",
-        "type"
+        "5"
       ],
       "metadata": {
-        "id": "vsHh5buZADND"
+        "id": "vsHh5buZADND",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f0dee2b-ebab-45bb-852c-47a54b3e51ce"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "id(5)"
+      ],
       "metadata": {
         "id": "sivPtqSjADQV"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5"
+      ],
       "metadata": {
         "id": "JC8jO47wADlm"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(id(edad))\n",
+        "print(id(5))"
+      ],
+      "metadata": {
+        "id": "XhExqTYG5UBV",
+        "outputId": "fff0b8e9-92be-470e-f070-9fdb932af85c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10750984\n",
+            "10750984\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numerocinco = 5"
+      ],
+      "metadata": {
+        "id": "cyNC_I3t5Xp4"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(numerocinco)"
+      ],
+      "metadata": {
+        "id": "hX7ZseZ25Z1C",
+        "outputId": "89862843-c575-490d-e2d2-65f80b1e5742",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10750984"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = 'Carlos'"
+      ],
+      "metadata": {
+        "id": "9WL4sxUr6utd"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id('Carlos')"
+      ],
+      "metadata": {
+        "id": "Dr8c3REz6sqm",
+        "outputId": "690a2b53-9018-4801-a5be-0e8de8cfcbda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133271860820976"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(nombre)"
+      ],
+      "metadata": {
+        "id": "4DgiEgzW7EdM",
+        "outputId": "37a00d83-5306-4a44-8894-0f3ed93c2660",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133271860820976"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -314,33 +446,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "C9M-JhijsXXz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4p_nXRbbsXQD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IZLQnZUj_8bd"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
