Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -211,11 +211,11 @@
         "print(id(5))"
       ],
       "metadata": {
-        "id": "XhExqTYG5UBV",
-        "outputId": "fff0b8e9-92be-470e-f070-9fdb932af85c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XhExqTYG5UBV",
+        "outputId": "fff0b8e9-92be-470e-f070-9fdb932af85c"
       },
       "execution_count": 37,
       "outputs": [
@@ -246,11 +246,11 @@
         "id(numerocinco)"
       ],
       "metadata": {
-        "id": "hX7ZseZ25Z1C",
-        "outputId": "89862843-c575-490d-e2d2-65f80b1e5742",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hX7ZseZ25Z1C",
+        "outputId": "89862843-c575-490d-e2d2-65f80b1e5742"
       },
       "execution_count": 39,
       "outputs": [
@@ -283,11 +283,11 @@
         "id('Carlos')"
       ],
       "metadata": {
-        "id": "Dr8c3REz6sqm",
-        "outputId": "690a2b53-9018-4801-a5be-0e8de8cfcbda",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dr8c3REz6sqm",
+        "outputId": "690a2b53-9018-4801-a5be-0e8de8cfcbda"
       },
       "execution_count": 41,
       "outputs": [
@@ -309,11 +309,11 @@
         "id(nombre)"
       ],
       "metadata": {
-        "id": "4DgiEgzW7EdM",
-        "outputId": "37a00d83-5306-4a44-8894-0f3ed93c2660",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4DgiEgzW7EdM",
+        "outputId": "37a00d83-5306-4a44-8894-0f3ed93c2660"
       },
       "execution_count": 42,
       "outputs": [
@@ -378,30 +378,121 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad = 5"
+      ],
       "metadata": {
         "id": "J5a9t73A_-PX"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(edad)"
+      ],
       "metadata": {
-        "id": "rqmO1ew-_-So"
+        "id": "rqmO1ew-_-So",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aba56559-f68a-45e2-bd7f-1f1d4a512e31"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = 9.5\n",
+        "type(promedio)"
+      ],
       "metadata": {
-        "id": "xkrPMkeY_-cP"
+        "id": "xkrPMkeY_-cP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "463a6f4c-bff1-4e7b-c7ef-c4322168cf04"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = 'Carlos'\n",
+        "type('Carlos')"
+      ],
+      "metadata": {
+        "id": "OQlWCMI88XvA",
+        "outputId": "acec5b0d-2478-40f0-ae29-7e9edb873c1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "v = True\n",
+        "type(v)"
+      ],
+      "metadata": {
+        "id": "3L6JmWUl8ZFc",
+        "outputId": "76fc76d3-308e-4f20-a606-1d8021293c1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "markdown",
