Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -447,11 +447,11 @@
         "type('Carlos')"
       ],
       "metadata": {
-        "id": "OQlWCMI88XvA",
-        "outputId": "acec5b0d-2478-40f0-ae29-7e9edb873c1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OQlWCMI88XvA",
+        "outputId": "acec5b0d-2478-40f0-ae29-7e9edb873c1b"
       },
       "execution_count": 47,
       "outputs": [
@@ -474,11 +474,11 @@
         "type(v)"
       ],
       "metadata": {
-        "id": "3L6JmWUl8ZFc",
-        "outputId": "76fc76d3-308e-4f20-a606-1d8021293c1e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3L6JmWUl8ZFc",
+        "outputId": "76fc76d3-308e-4f20-a606-1d8021293c1e"
       },
       "execution_count": 48,
       "outputs": [
@@ -705,12 +705,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "t = 'Alura'\n",
+        "type(t)"
+      ],
       "metadata": {
-        "id": "ityEWqvh_2wK"
+        "id": "ityEWqvh_2wK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "84622dd9-75a0-443e-a3c6-aa9aa50e946c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -742,13 +760,29 @@
     {
       "cell_type": "code",
       "source": [
-        "texto = '  Micaela de los Sanyos '"
+        "texto = '  Micaela de los Sanyos '\n",
+        "id(texto)"
       ],
       "metadata": {
-        "id": "icDWtYTjBO0n"
+        "id": "icDWtYTjBO0n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af64c9e4-7026-4f70-ca3f-3eb75699e359"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133271860741184"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -775,12 +809,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.upper()"
+      ],
       "metadata": {
-        "id": "wMVshJrY_ZXh"
+        "id": "wMVshJrY_ZXh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "6def60bc-8a76-4bf9-afb5-f3991abaa059"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  MICAELA DE LOS SANYOS '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -794,12 +849,63 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.lower()"
+      ],
       "metadata": {
-        "id": "px3yEeNH_YK4"
+        "id": "px3yEeNH_YK4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "7b6b7649-97dc-4555-c441-064614113a27"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  micaela de los sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "texto"
+      ],
+      "metadata": {
+        "id": "lt31JcPxArpY",
+        "outputId": "44e1a219-09e5-4732-8d6c-fa0390664a1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -813,12 +919,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.strip()"
+      ],
       "metadata": {
-        "id": "76dLgNa4_XAe"
+        "id": "76dLgNa4_XAe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "15f89a30-028f-45bc-bcc7-b4b1d62bf1a8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Micaela de los Sanyos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -830,15 +957,6 @@
       "metadata": {
         "id": "m6notiyS1SCV"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PNXAixtE_V6R"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -855,12 +973,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.replace('y','t')"
+      ],
       "metadata": {
-        "id": "JjkBRklr_T5n"
+        "id": "PNXAixtE_V6R",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "694113d4-59bb-4967-b7ac-b57c37aecc5a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Santos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(texto)"
+      ],
+      "metadata": {
+        "id": "P9URxxY7A24V",
+        "outputId": "e0ec46f8-00e9-4e59-89bf-67f5be88ff2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133271860741184"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -873,21 +1038,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nuevo_texto = texto.strip().replace('y','t').upper()\n",
+        "print(nuevo_texto)\n",
+        "print(id(texto),id(nuevo_texto))"
+      ],
       "metadata": {
-        "id": "ocPP-Jaj_SJI"
+        "id": "JjkBRklr_T5n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4cce00d4-ab06-423b-e57f-be214f97d448"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MICAELA DE LOS SANTOS\n",
+            "133271860741184 133271860847408\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto = texto.strip().replace('y','t').upper()\n",
+        "print(texto)\n",
+        "print(id(texto),id(nuevo_texto))"
+      ],
       "metadata": {
-        "id": "m1RvLGZZ_SP3"
+        "id": "cvJ7l375C435",
+        "outputId": "4d1b924e-6e1e-4893-dd2a-642623ceba32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MICAELA DE LOS SANTOS\n",
+            "133271862027056 133271860847408\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
