Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1103,21 +1103,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = input('Escribe tu Nombre')"
+      ],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "JZy1Q9Tl_PgL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1c15f92-7035-41ae-89c0-056c3d03622f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Escribe tu Nombre Carlos\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(nombre)"
+      ],
       "metadata": {
-        "id": "JZy1Q9Tl_PgL"
+        "id": "3NuEH9QqNi3L",
+        "outputId": "0f56fb4c-fad6-49e4-9c03-ad8be65d1f6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1146,30 +1177,108 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "ano_admision = int(input('Digita el año de admisión'))"
+      ],
+      "metadata": {
+        "id": "M2ueeH6l_NMe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "907618e6-8a30-4e93-ba0e-34292a37116e"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita el año de admisión 2023\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "M2ueeH6l_NMe"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "_djZVkBSPCax"
+      }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(ano_admision)"
+      ],
       "metadata": {
-        "id": "xfWwuViK_NUn"
+        "id": "xfWwuViK_NUn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "432d7f57-d739-4fc8-cd9f-3d11b686c72a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_admision = float(input('Digita la nota de admisión'))"
+      ],
       "metadata": {
-        "id": "uFCHDyew_NZm"
+        "id": "uFCHDyew_NZm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db67f94e-3147-440d-a881-1950e1440cd6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digita la nota de admisión 9.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nota_admision)"
+      ],
+      "metadata": {
+        "id": "1CHaS6jWORDq",
+        "outputId": "8b8ba920-f8f0-43bd-ed05-b1549412d17e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1184,12 +1293,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'\\tEl año de admisión fue: {ano_admision} \\n\\tLanota de admisión fue: {nota_admision}')"
+      ],
       "metadata": {
-        "id": "keJjA5N9_K5i"
+        "id": "keJjA5N9_K5i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90c1d82d-cf51-49f8-d5f2-56fbe3731f9c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tEl año de admisión fue: 2023 \n",
+            "\tLanota de admisión fue: 9.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
