--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -91,7 +91,7 @@
         },
         "outputId": "34c5b5ef-f2a3-48bb-8eb3-d91cba749bc0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         },
         "outputId": "a449bbb6-57ae-4f2d-b495-451f0030969b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         },
         "outputId": "1f0dee2b-ebab-45bb-852c-47a54b3e51ce"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "JC8jO47wADlm"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
         "id": "XhExqTYG5UBV",
         "outputId": "fff0b8e9-92be-470e-f070-9fdb932af85c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "cyNC_I3t5Xp4"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "id": "hX7ZseZ25Z1C",
         "outputId": "89862843-c575-490d-e2d2-65f80b1e5742"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "9WL4sxUr6utd"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -289,7 +289,7 @@
         "id": "Dr8c3REz6sqm",
         "outputId": "690a2b53-9018-4801-a5be-0e8de8cfcbda"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
         "id": "4DgiEgzW7EdM",
         "outputId": "37a00d83-5306-4a44-8894-0f3ed93c2660"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +384,7 @@
       "metadata": {
         "id": "J5a9t73A_-PX"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         },
         "outputId": "aba56559-f68a-45e2-bd7f-1f1d4a512e31"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
         },
         "outputId": "463a6f4c-bff1-4e7b-c7ef-c4322168cf04"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,7 +453,7 @@
         "id": "OQlWCMI88XvA",
         "outputId": "acec5b0d-2478-40f0-ae29-7e9edb873c1b"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
         "id": "3L6JmWUl8ZFc",
         "outputId": "76fc76d3-308e-4f20-a606-1d8021293c1e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
         },
         "outputId": "498d1461-b478-4c5b-d610-c2fdccd6e897"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +594,7 @@
         },
         "outputId": "b2958142-8ba7-4c89-dca9-25aa63ad2827"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +618,7 @@
         },
         "outputId": "858fd661-bc87-4f5f-a4ce-05461aa54adc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         },
         "outputId": "e28b78fb-d33b-4c4d-de15-600476e5f65e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
         "id": "CmCiX0FLyKUW",
         "outputId": "4bd76e5d-9c20-4330-b657-0fa2478462e3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +716,7 @@
         },
         "outputId": "84622dd9-75a0-443e-a3c6-aa9aa50e946c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -770,7 +770,7 @@
         },
         "outputId": "af64c9e4-7026-4f70-ca3f-3eb75699e359"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +820,7 @@
         },
         "outputId": "6def60bc-8a76-4bf9-afb5-f3991abaa059"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
         },
         "outputId": "7b6b7649-97dc-4555-c441-064614113a27"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +890,7 @@
         "id": "lt31JcPxArpY",
         "outputId": "44e1a219-09e5-4732-8d6c-fa0390664a1c"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
         },
         "outputId": "15f89a30-028f-45bc-bcc7-b4b1d62bf1a8"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +984,7 @@
         },
         "outputId": "694113d4-59bb-4967-b7ac-b57c37aecc5a"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1013,7 @@
         "id": "P9URxxY7A24V",
         "outputId": "e0ec46f8-00e9-4e59-89bf-67f5be88ff2e"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1050,7 +1050,7 @@
         },
         "outputId": "4cce00d4-ab06-423b-e57f-be214f97d448"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1076,7 @@
         "id": "cvJ7l375C435",
         "outputId": "4d1b924e-6e1e-4893-dd2a-642623ceba32"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
         },
         "outputId": "b1c15f92-7035-41ae-89c0-056c3d03622f"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1136,7 +1136,7 @@
         "id": "3NuEH9QqNi3L",
         "outputId": "0f56fb4c-fad6-49e4-9c03-ad8be65d1f6e"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1187,7 +1187,7 @@
         },
         "outputId": "907618e6-8a30-4e93-ba0e-34292a37116e"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1217,7 +1217,7 @@
         },
         "outputId": "432d7f57-d739-4fc8-cd9f-3d11b686c72a"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1243,7 @@
         },
         "outputId": "db67f94e-3147-440d-a881-1950e1440cd6"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1266,7 +1266,7 @@
         "id": "1CHaS6jWORDq",
         "outputId": "8b8ba920-f8f0-43bd-ed05-b1549412d17e"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1303,7 +1303,7 @@
         },
         "outputId": "90c1d82d-cf51-49f8-d5f2-56fbe3731f9c"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1325,8 +1325,23 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
+      "metadata": {
+        "id": "8HTvH9zRxa_A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Nota de aprobación entre 7 y 10 == nota de aprobación >= 7\n",
+        "# Nota de reprobación es menor a 7 == nota de reprobación < 7\n",
+        "\n",
+        "¨¨¨\n",
+        "si la nota es mayor o igual a 7 el estudiante aprueba\n",
+        "si no el estudiante reprueba\n",
+        "¨¨¨"
+      ],
       "metadata": {
         "id": "pa4gLncu-mvU"
       },
