Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1387,21 +1387,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 < 7:\n",
+        "  print('La condición es verdadera.')"
+      ],
       "metadata": {
-        "id": "S2S6XAFz-czM"
+        "id": "S2S6XAFz-czM",
+        "outputId": "5f7e6b06-10a9-4a2f-c806-b533e7a0e6d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condición es verdadera.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 > 7:\n",
+        "  print('La condición es verdadera.')\n",
+        "print('Fin de la consulta')"
+      ],
       "metadata": {
-        "id": "YHkwMMyY-c1r"
+        "id": "YHkwMMyY-c1r",
+        "outputId": "c178ed89-0d34-46a1-ee4c-4a1a90528644",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fin de la consulta\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1423,21 +1454,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 > 7:\n",
+        "  print('La condición es verdadera.')\n",
+        "else:\n",
+        "    print('La condición es falsa.')\n",
+        "print('Fin de la consulta')"
+      ],
       "metadata": {
-        "id": "ZTfNJd_f-aOq"
+        "id": "ZTfNJd_f-aOq",
+        "outputId": "2a40ca55-2758-4c94-a261-e64843a3a61d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LPOb5MkV-btq"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condición es falsa.\n",
+            "Fin de la consulta\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
