--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1393,10 +1393,10 @@
       ],
       "metadata": {
         "id": "S2S6XAFz-czM",
-        "outputId": "5f7e6b06-10a9-4a2f-c806-b533e7a0e6d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5f7e6b06-10a9-4a2f-c806-b533e7a0e6d9"
       },
       "execution_count": 1,
       "outputs": [
@@ -1418,10 +1418,10 @@
       ],
       "metadata": {
         "id": "YHkwMMyY-c1r",
-        "outputId": "c178ed89-0d34-46a1-ee4c-4a1a90528644",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c178ed89-0d34-46a1-ee4c-4a1a90528644"
       },
       "execution_count": 3,
       "outputs": [
@@ -1463,10 +1463,10 @@
       ],
       "metadata": {
         "id": "ZTfNJd_f-aOq",
-        "outputId": "2a40ca55-2758-4c94-a261-e64843a3a61d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2a40ca55-2758-4c94-a261-e64843a3a61d"
       },
       "execution_count": 5,
       "outputs": [
@@ -1494,50 +1494,70 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Digita el promedio de la nota: '))\n",
+        "if nota >= 7:\n",
+        "  print('Aprobó')\n",
+        "else:\n",
+        "  print('reprobó')"
+      ],
       "metadata": {
-        "id": "UukCN4AQ-YYW"
+        "id": "UukCN4AQ-YYW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b7bf7296-36c1-46e3-b068-b3ed805f665f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita el promedio de la nota: 5\n",
+            "reprobO\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Digita la nota: '))\n",
+        "\n",
+        "if nota >= 7:\n",
+        "  print('Aprobó,')\n",
+        "if 7 > nota >= 5:\n",
+        "  print('Recuperación.')\n",
+        "if nota < 5:\n",
+        "  print('reprobó')\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "X0o8FW1H-YkA"
+        "id": "iU-pjoJt-W89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3b82758-303f-4f74-9382-fcdc82f7a102"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita la nota: 7.1\n",
+            "Aprobó,\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Ahora, nuestra institución educativa estableció que las personas que tengan el promedio entre 5.0 y 7.0 pueden participar del curso de **Recuperación** durante las vacaciones para lograr aprobar.\n",
-        "\n",
-        "Entonces podemos apoyarnos en un conjunto de `if`s para poder estructurar esta nueva condición."
-      ],
+      "source": [],
       "metadata": {
-        "id": "bD9O17HB6LUo"
+        "id": "T1GhWKWO-SpP"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "G9cJ5O9--W52"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "iU-pjoJt-W89"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1552,21 +1572,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Digita la nota: '))\n",
+        "\n",
+        "if nota >= 7:\n",
+        "  print('Aprobó,')\n",
+        "if 7 > nota >= 5:\n",
+        "  print('Recuperación.')\n",
+        "else:\n",
+        "  print('reprobó')\n"
+      ],
       "metadata": {
-        "id": "C21JmOuK-VU8"
+        "id": "C21JmOuK-VU8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13261768-b6bf-4f5d-a55b-743a6e1386f2"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bHiVgnPs-Vlv"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita la nota: 8\n",
+            "Aprobó,\n",
+            "reprobó\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1612,12 +1646,34 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('Digita la nota: '))\n",
+        "\n",
+        "if nota >= 7:\n",
+        "  print('Aprobó.')\n",
+        "elif 7 > nota >= 5:\n",
+        "  print('Recuperación.')\n",
+        "else:\n",
+        "  print('Reprobó.')\n"
+      ],
       "metadata": {
-        "id": "QFamB78s-TW_"
+        "id": "QFamB78s-TW_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49856f28-e074-45ef-9a81-3cb8fd9d15df"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita la nota: 6.9\n",
+            "Recuperación.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
