Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1398,7 +1398,7 @@
         },
         "outputId": "5f7e6b06-10a9-4a2f-c806-b533e7a0e6d9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1423,7 @@
         },
         "outputId": "c178ed89-0d34-46a1-ee4c-4a1a90528644"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1468,7 +1468,7 @@
         },
         "outputId": "2a40ca55-2758-4c94-a261-e64843a3a61d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,7 +1508,7 @@
         },
         "outputId": "b7bf7296-36c1-46e3-b068-b3ed805f665f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1540,7 +1540,7 @@
         },
         "outputId": "f3b82758-303f-4f74-9382-fcdc82f7a102"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1589,7 +1589,7 @@
         },
         "outputId": "13261768-b6bf-4f5d-a55b-743a6e1386f2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1663,7 +1663,7 @@
         },
         "outputId": "49856f28-e074-45ef-9a81-3cb8fd9d15df"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1743,30 +1743,81 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "v=True\n",
+        "f=False"
+      ],
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v and f:\n",
+        "  print('La condición es verdadera.')\n",
+        "else:\n",
+        "  print('La condición es falso.')"
+      ],
       "metadata": {
-        "id": "W5BIrpOD-PeI"
+        "id": "W5BIrpOD-PeI",
+        "outputId": "e18907fa-2b22-4d1a-b251-ed40e194bd1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condición es falso.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v and f:\n",
+        "  print('La condición es verdadera.')\n",
+        "else:\n",
+        "  print('La condición es falso.')"
+      ],
       "metadata": {
         "id": "fpDhYxq4-PiM"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if not f:\n",
+        "  print('La condición es verdadera.')\n",
+        "else:\n",
+        "  print('La condición es falso.')"
+      ],
+      "metadata": {
+        "id": "eMOgJtWfXOHF",
+        "outputId": "6cde8eef-f0ac-4e18-a9a6-d8edda01073f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La condición es verdadera.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1777,6 +1828,18 @@
       ],
       "metadata": {
         "id": "w7EXG1dhWtja"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rbgOnZFqXK55"
       }
     },
     {
@@ -1814,30 +1877,78 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista = 'Juan Pérez, María González, Pedro Rodríguez, Ana López, Carlos Martínez, Laura Sánchez, José García, Elena Fernández, Luis Morales, Carmen Torres, David Ruiz, Isabel Ramírez, Javier Díaz, Sara Herrera, Miguel Castro, Patricia Ortega, Francisco Vargas, Marta Jiménez, Manuel Medina, Rosa Molina, Alejandro Silva, Silvia Ruiz, Andrés Torres, Natalia Soto, Diego Guerrero, Paula Ríos, Ricardo Navarro, Alicia Cordero, Carlos Vidal, Lorena Gómez'"
+      ],
       "metadata": {
         "id": "gPPN9BCT-Mki"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre_1 = 'Miguel Castro'\n",
+        "nombre_2 = 'Marcelo Noguera'"
+      ],
       "metadata": {
         "id": "GINbG3Fa-Mnb"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if nombre_1 in lista:\n",
+        "  print('El estudiane aprobó.')\n",
+        "else:\n",
+        "  print('El estudiante reprobó.')"
+      ],
       "metadata": {
-        "id": "hk-RhNRT-Mp7"
+        "id": "eoSbujD7YTrB",
+        "outputId": "7c40b2eb-af9f-42fe-e731-e88c87fbd743",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El estudiane aprobó.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if nombre_2 in lista:\n",
+        "  print('El estudiane aprobó.')\n",
+        "else:\n",
+        "  print('El estudiante reprobó.')"
+      ],
+      "metadata": {
+        "id": "hk-RhNRT-Mp7",
+        "outputId": "59d15baa-85dc-4396-81a9-2c45cdf421d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El estudiante reprobó.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
